[package]
name = "de_messages"
description = "Digital Extinction multiplayer message protocol."

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
bincode.workspace = true
thiserror.workspace = true
