[package]
name = "de_movement"
description = "Digital Extinction entity movement, local dynamic obstacle avoidance, kinematics and similar."

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
# DE
de_core = { path = "../core", version = "0.1.0-dev" }
de_objects = { path = "../objects", version = "0.1.0-dev" }
de_map = { path = "../map", version = "0.1.0-dev" }
de_pathing = { path = "../pathing", version = "0.1.0-dev" }
de_index = { path = "../index", version = "0.1.0-dev" }

# Other
bevy = "0.8"
iyes_loopless = "0.7"
parry3d = "0.9.0"
parry2d = { git = "https://github.com/Indy2222/parry", branch = "feature/dilation" }
