[package]
name = "de_objects"
description = "Caching of object on Digital Extinction game map."

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
# DE
de_core = { path = "../core", version = "0.1.0-dev" }

# Other
bevy = "0.8"
iyes_loopless = "0.7"
iyes_progress = { version = "0.4", features = [ "iyes_loopless" ] }
glam = "0.21"
parry2d = { git = "https://github.com/Indy2222/parry", branch = "feature/dilation" }
parry3d = "0.9.0"
enum-map = "2.3.0"
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
