[package]
name = "de_objects"
description = "Caching of object on Digital Extinction game map."

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
# DE
de_core.workspace = true

# Other
bevy.workspace = true
iyes_progress.workspace = true
glam.workspace = true
parry2d.workspace = true
parry3d.workspace = true
enum-map.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
