[package]
name = "de_objects"
description = "Caching of object on Digital Extinction game map."

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
# DE
de_core.workspace = true
de_types.workspace = true

# Other
ahash.workspace = true
anyhow.workspace = true
bevy.workspace = true
enum-iterator.workspace = true
enum-map.workspace = true
glam.workspace = true
iyes_progress.workspace = true
parry2d.workspace = true
parry3d.workspace = true
serde.workspace = true
serde_json.workspace = true
