[package]
name = "de_pathing"
description = "Global path finding and path (re)scheduling in Digital Extinction."

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
# DE
de_core.workspace = true
de_map.workspace = true
de_messages.workspace = true
de_multiplayer.workspace = true
de_objects.workspace = true
de_types.workspace = true

# Other
ahash.workspace = true
approx.workspace = true
bevy.workspace = true
glam.workspace = true
nalgebra.workspace = true
parry2d.workspace = true
rstar.workspace = true
spade.workspace = true
tinyvec.workspace = true
tracing.workspace = true

[dev-dependencies]
# DE
de_test_utils.workspace = true

# Other
ntest.workspace = true
criterion.workspace = true

[[bench]]
name = "pathing"
harness = false
